--- a/en.lproj/MBVPortal.xib
+++ b/en.lproj/MBVPortal.xib
@@ -137,22 +137,42 @@
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES"/>
                                                     <prototypeCellViews>
-                                                        <tableCellView wantsLayer="YES" id="209">
-                                                            <rect key="frame" x="1" y="1" width="255" height="66"/>
+                                                        <tableCellView id="209">
+                                                            <rect key="frame" x="1" y="1" width="255" height="70"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <imageView id="283">
-                                                                    <rect key="frame" x="0.0" y="50" width="12" height="12"/>
+                                                                <imageView identifier="statusIcon" id="283" userLabel="Status Image View">
+                                                                    <rect key="frame" x="0.0" y="54" width="12" height="12"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSActionTemplate" id="286"/>
+                                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="MBUnreadEmail" id="286"/>
+                                                                    <connections>
+                                                                        <binding destination="209" name="hidden" keyPath="objectValue.isSeenFlag" id="P7y-e4-5c7">
+                                                                            <dictionary key="options">
+                                                                                <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
+                                                                            </dictionary>
+                                                                        </binding>
+                                                                    </connections>
                                                                 </imageView>
-                                                                <imageView identifier="attachment" toolTip="        " id="289">
-                                                                    <rect key="frame" x="0.0" y="18" width="12" height="12"/>
+                                                                <imageView identifier="statusIcon2" id="OTt-VR-Pme" userLabel="Status2 Image View">
+                                                                    <rect key="frame" x="0.0" y="38" width="12" height="12"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSActionTemplate" id="290"/>
+                                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="MBFlaggedEmail" id="rPh-ke-J8Q"/>
+                                                                    <connections>
+                                                                        <binding destination="209" name="hidden" keyPath="objectValue.isFlaggedFlag" id="wiq-jK-BsR">
+                                                                            <dictionary key="options">
+                                                                                <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
+                                                                                <string key="NSValueTransformerName">NSNegateBoolean</string>
+                                                                            </dictionary>
+                                                                        </binding>
+                                                                    </connections>
+                                                                </imageView>
+                                                                <imageView identifier="attachment" toolTip="        " id="289" userLabel="Attachment Image View">
+                                                                    <rect key="frame" x="0.0" y="22" width="12" height="12"/>
+                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="290"/>
                                                                 </imageView>
                                                                 <textField identifier="addressFrom" verticalHuggingPriority="750" id="227">
-                                                                    <rect key="frame" x="12" y="51" width="149" height="15"/>
+                                                                    <rect key="frame" x="12" y="53" width="179" height="17"/>
                                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" title="From" usesSingleLineMode="YES" id="228">
                                                                         <font key="font" metaFont="systemBold"/>
@@ -169,12 +189,12 @@
                                                                     </connections>
                                                                 </textField>
                                                                 <textField identifier="dateSent" verticalHuggingPriority="750" id="222">
-                                                                    <rect key="frame" x="154" y="52" width="100" height="14"/>
+                                                                    <rect key="frame" x="179" y="54" width="75" height="14"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="right" title="Date" placeholderString="A Message Subject line" usesSingleLineMode="YES" id="223">
                                                                         <dateFormatter key="formatter" dateStyle="short" timeStyle="short" doesRelativeDateFormatting="YES" id="226"/>
-                                                                        <font key="font" metaFont="systemBold"/>
-                                                                        <color key="textColor" red="0.0" green="0.0" blue="0.63278099799999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                                        <font key="font" metaFont="smallSystem"/>
+                                                                        <color key="textColor" name="disabledControlTextColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
                                                                     <connections>
@@ -187,10 +207,10 @@
                                                                     </connections>
                                                                 </textField>
                                                                 <textField identifier="subject" verticalHuggingPriority="750" id="210">
-                                                                    <rect key="frame" x="12" y="30" width="242" height="17"/>
+                                                                    <rect key="frame" x="12" y="33" width="242" height="19"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                     <textFieldCell key="cell" lineBreakMode="truncatingTail" allowsUndo="NO" sendsActionOnEndEditing="YES" title="Subject" placeholderString="A Message Subject line" usesSingleLineMode="YES" id="211">
-                                                                        <font key="font" metaFont="smallSystemBold"/>
+                                                                        <font key="font" metaFont="system"/>
                                                                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                                     </textFieldCell>
@@ -204,7 +224,7 @@
                                                                     </connections>
                                                                 </textField>
                                                                 <textField identifier="messageSummary" verticalHuggingPriority="750" id="233">
-                                                                    <rect key="frame" x="12" y="1.0000000000000011" width="242" height="30"/>
+                                                                    <rect key="frame" x="12" y="0.0" width="242" height="32"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
                                                                     <textFieldCell key="cell" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="left" title="MessageSummary" placeholderString="" allowsEditingTextAttributes="YES" id="234">
                                                                         <font key="font" metaFont="smallSystem"/>
@@ -275,7 +295,8 @@
         </menu>
     </objects>
     <resources>
-        <image name="NSActionTemplate" width="15" height="15"/>
+        <image name="MBFlaggedEmail" width="11" height="11"/>
+        <image name="MBUnreadEmail" width="11" height="11"/>
         <image name="NSAddTemplate" width="8" height="8"/>
         <image name="NSRemoveTemplate" width="8" height="8"/>
     </resources>
