--- a/en.lproj/MBMessageViewController.xib
+++ b/en.lproj/MBMessageViewController.xib
@@ -27,16 +27,25 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <subviews>
                         <textField horizontalHuggingPriority="900" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="N1j-tJ-Va9">
-                            <rect key="frame" x="824" y="105" width="38" height="17"/>
+                            <rect key="frame" x="815" y="105" width="47" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="sender" id="uZQ-ae-hO1">
                                 <font key="font" metaFont="system"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <binding destination="-2" name="value" keyPath="self.representedObject.addressFrom" id="mSf-rm-Tm9">
+                                    <dictionary key="options">
+                                        <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
+                                        <bool key="NSContinuouslyUpdatesValue" value="YES"/>
+                                        <string key="NSValueTransformerName">MBSimpleRFC822AddressToStringTransformer</string>
+                                    </dictionary>
+                                </binding>
+                            </connections>
                         </textField>
                         <textField horizontalHuggingPriority="814" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Mqd-3z-t15">
-                            <rect key="frame" x="824" y="80" width="38" height="17"/>
+                            <rect key="frame" x="803" y="80" width="59" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="dateSent" id="9VQ-BA-VAt">
                                 <dateFormatter key="formatter" dateStyle="short" timeStyle="short" doesRelativeDateFormatting="YES" id="7ym-bj-ZAa"/>
@@ -44,24 +53,50 @@
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <binding destination="-2" name="value" keyPath="self.representedObject.dateSent" id="boB-8R-BiA">
+                                    <dictionary key="options">
+                                        <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
+                                        <bool key="NSContinuouslyUpdatesValue" value="YES"/>
+                                    </dictionary>
+                                </binding>
+                            </connections>
                         </textField>
                         <textField horizontalHuggingPriority="888" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QgS-JV-yC2">
-                            <rect key="frame" x="-2" y="20" width="38" height="17"/>
+                            <rect key="frame" x="-2" y="20" width="49" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="subject" id="Ccp-NO-izn">
                                 <font key="font" metaFont="system"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <binding destination="-2" name="value" keyPath="self.representedObject.subject" id="Mnu-FF-tHL">
+                                    <dictionary key="options">
+                                        <string key="NSNullPlaceholder">No Subject</string>
+                                        <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
+                                        <bool key="NSContinuouslyUpdatesValue" value="YES"/>
+                                    </dictionary>
+                                </binding>
+                            </connections>
                         </textField>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2Ac-g8-mAg">
-                            <rect key="frame" x="-2" y="45" width="38" height="17"/>
+                            <rect key="frame" x="-2" y="45" width="66" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="recipients" id="VVL-eq-amh">
                                 <font key="font" metaFont="system"/>
                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
+                            <connections>
+                                <binding destination="-2" name="value" keyPath="self.representedObject.addressesTo" id="oOe-OF-8of">
+                                    <dictionary key="options">
+                                        <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
+                                        <bool key="NSContinuouslyUpdatesValue" value="YES"/>
+                                        <string key="NSValueTransformerName">MBSimpleRFC822AddressSetToStringTransformer</string>
+                                    </dictionary>
+                                </binding>
+                            </connections>
                         </textField>
                     </subviews>
                     <constraints>
@@ -80,6 +115,7 @@
                     <accessibility description="Header"/>
                     <connections>
                         <outlet property="dateSent" destination="Mqd-3z-t15" id="9iJ-Hr-18Z"/>
+                        <outlet property="menu" destination="Vfz-7L-t85" id="lgC-TI-xUI"/>
                         <outlet property="recipients" destination="2Ac-g8-mAg" id="DcI-Zu-Vfp"/>
                         <outlet property="sender" destination="N1j-tJ-Va9" id="Np5-z3-WcY"/>
                         <outlet property="subject" destination="QgS-JV-yC2" id="cvG-nq-51U"/>
@@ -89,6 +125,9 @@
                     <rect key="frame" x="20" y="20" width="860" height="1018"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <accessibility description="Message Content"/>
+                    <connections>
+                        <outlet property="menu" destination="Vfz-7L-t85" id="Hqr-e7-FlT"/>
+                    </connections>
                 </customView>
             </subviews>
             <constraints>
@@ -101,9 +140,6 @@
                 <constraint firstItem="7zo-YP-z6R" firstAttribute="top" secondItem="LFh-Jj-pYw" secondAttribute="bottom" id="jxL-uP-z7C"/>
             </constraints>
             <accessibility description="Message"/>
-            <connections>
-                <outlet property="menu" destination="Vfz-7L-t85" id="pFP-Yw-rSZ"/>
-            </connections>
         </customView>
         <userDefaultsController id="3"/>
         <viewController id="3902" userLabel="Popover View Controller"/>
@@ -134,5 +170,6 @@
                 </menuItem>
             </items>
         </menu>
+        <userDefaultsController representsSharedInstance="YES" id="onM-tE-AeV"/>
     </objects>
 </document>
