--- a/en.lproj/MBMessageViewController.xib
+++ b/en.lproj/MBMessageViewController.xib
@@ -18,7 +18,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView horizontalHuggingPriority="954" verticalHuggingPriority="966" verticalCompressionResistancePriority="1000" id="1" userLabel="Message View" customClass="MBMessageView">
+        <customView wantsLayer="YES" horizontalHuggingPriority="954" verticalHuggingPriority="966" verticalCompressionResistancePriority="1000" id="1" userLabel="Message View" customClass="MBMessageView">
             <rect key="frame" x="0.0" y="0.0" width="900" height="1200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
             <subviews>
@@ -139,6 +139,7 @@
                 <constraint firstItem="LFh-Jj-pYw" firstAttribute="top" secondItem="1" secondAttribute="top" constant="20" id="jdm-kR-Rng"/>
                 <constraint firstItem="7zo-YP-z6R" firstAttribute="top" secondItem="LFh-Jj-pYw" secondAttribute="bottom" id="jxL-uP-z7C"/>
             </constraints>
+            <animations/>
             <accessibility description="Message"/>
         </customView>
         <userDefaultsController id="3"/>
